syntax = "proto3";
package proto;
option go_package="/internal/proto";

 

 


message Product{
    string productId=1;
    int32 quantity=2;
}

message Cart{
    repeated Product product=1;
}



message CartResponse{
    Cart cart=1;
}
message CartRequest{
    string customerId=1;
}


 

service Service{
    rpc CartService(CartRequest)returns (CartResponse){};
 }


